results/SpecGenBench/2-shot/log-ThreeConsecutiveOdds-2023_11_06_14_56_54.txt
public class ThreeConsecutiveOdds {

    //@ requires arr != null;
    //@ ensures \result == true <==> (\exists int i; 0 <= i && i <= arr.length - 3; (arr[i] % 2 != 0) && (arr[i + 1] % 2 != 0) && (arr[i + 2] % 2 != 0));
    public boolean threeConsecutiveOdds(int[] arr) {
        int n = arr.length;

        //@ maintaining 0 <= i && i <= n - 3;
        //@ maintaining \result == true <==> (\exists int k; 0 <= k && k <= i; (arr[k] % 2 != 0) && (arr[k + 1] % 2 != 0) && (arr[k + 2] % 2 != 0));
        //@ decreases n - i;
        for (int i = 0; i <= n - 3; ++i) {
            if ((arr[i] & 1) != 0 && (arr[i + 1] & 1) != 0 && (arr[i + 2] & 1) != 0) {
                return true;
            }
        }
        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/ThreeConsecutiveOdds.java:9: error: A \result expression may not be in a loop_invariant clause
        //@ maintaining \result == true <==> (\exists int k; 0 <= k && k <= i; (arr[k] % 2 != 0) && (arr[k + 1] % 2 != 0) && (arr[k + 2] % 2 != 0));
                         ^
1 error

